@@ -80,7 +80,7 @@ namespace MonoDevelop.Gui.Dialogs.OptionPanels
 				//
 				projectLocationTextBox.GtkEntry.Text = PropertyService.GetProperty(
 					"MonoDevelop.Gui.Dialogs.NewProjectDialog.DefaultPath", 
-					System.IO.Path.Combine(System.Environment.GetFolderPath(System.Environment.SpecialFolder.Personal),
+					System.IO.Path.Combine(System.Environment.GetEnvironmentVariable ("HOME"),
 							"MonoDevelopProjects")).ToString();
 				projectLocationTextBox.DirectoryEntry = true;
 				//
